--- a/environment_win.yml
+++ b/environment_win.yml
@@ -1,4 +1,4 @@
-name: spatial
+name: xdbit
 channels:
   - pyviz
   - bioconda
@@ -330,4 +330,3 @@ dependencies:
     - zarr==2.6.1
     - zope-event==4.5.0
     - zope-interface==5.4.0
-prefix: C:\Users\Johannes\anaconda3\envs\spatial
