--- a/archive/environment_xdbit copy.yml
+++ b/archive/environment_xdbit copy.yml
@@ -13,9 +13,9 @@ dependencies:
   - python=3.8.13
   - sqlite=3.39.3
   - tk=8.6.12
-#  - ucrt=10.0.20348.0
-#  - vc=14.2
-#  - vs2015_runtime=14.29.30139
+  - ucrt=10.0.20348.0
+  - vc=14.2
+  - vs2015_runtime=14.29.30139
   - wheel=0.37.1
   - xz=5.2.6
   - pip:
@@ -108,7 +108,7 @@ dependencies:
     - pytomlpp==1.0.11
     - pytz==2022.2.1
     - pywavelets==1.3.0
-#    - pywin32==304
+    - pywin32==304
     - pyyaml==6.0
     - pyzmq==23.2.1
     - qtconsole==5.3.2
